[gd_scene load_steps=7 format=2]

[ext_resource path="res://font letra/ChiKareGo2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 71
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_top = 10
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[node name="pause" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 218.0
margin_top = 10.0
margin_right = -263.0
margin_bottom = -176.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 543.0
margin_bottom = 414.0
color = Color( 0, 0, 0, 1 )

[node name="Menu" type="CenterContainer" parent="."]
visible = false
margin_right = 543.0
margin_bottom = 414.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 149.0
margin_top = 148.0
margin_right = 393.0
margin_bottom = 265.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 244.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "pause"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 72.0
margin_right = 244.0
margin_bottom = 117.0

[node name="sair" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "sair"
icon_align = 1

[node name="continuar" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 171.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "continuar"
icon_align = 1

[node name="reset" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 244.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "reset"

[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/reset" to="." method="_on_reset_pressed"]
